fix [#35154] Python: UI issues with invoke_props_dialog() - highlighed buttons that were never pressed could be activated by accident when canceling search popup. - canceling a search popup on a popup would close both.